# New_devs_App

./: .gitignore
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: conftest.py  main.py
backend/app/api/v1/: dashboard.py  login.py
backend/app/api/v1/tests/: test_dashboard_integration.py
backend/app/core/: database_pool.py  errors.py
backend/app/core/tests/: test_database_pool_integration.py  test_database_pool_unit.py  test_errors_integration.py  test_errors_unit.py
backend/app/services/: cache.py  reservations.py
backend/app/services/tests/: test_cache_integration.py  test_cache_unit.py  test_reservations_integration.py  test_reservations_unit.py
backend/tests/: conftest.py  test_dashboard.py
frontend/: .gitignore  vite.config.ts
frontend/src/components/: Dashboard.test.tsx  Dashboard.tsx  Header.test.tsx  LoginPage.test.tsx  ProtectedRoute.test.tsx  PublicRoute.test.tsx  RevenueSummary.test.tsx  RevenueSummary.tsx  Sidebar.test.tsx
frontend/src/contexts/: AppContext.test.tsx  AuthContext.test.tsx
frontend/src/hooks/: useCities.test.ts  usePermissions.test.tsx
frontend/src/lib/: apiBase.test.ts  apiBase.ts  auth.test.ts  localAuthClient.ts  rbac.test.ts  secureApi.test.ts  secureApi.ts
frontend/src/services/: CityAccessService.test.ts  profileService.test.ts
frontend/src/test/: dom_test.tsx  helpers.tsx  setup.test.ts  setup.ts
frontend/src/utils/: apiErrorHandler.test.ts  authOptimizer.ts  jwtUtils.test.ts  sessionManager.ts  sessionRecovery.ts
